A few more fixes to the cragland level.

--- a/data/level/Seaside/cragland-catwalk.cfg
+++ b/data/level/Seaside/cragland-catwalk.cfg
@@ -37,7 +37,7 @@
 				"_x_bound": -1872,
 				"_y2_bound": 654,
 				"_y_bound": -592,
-				"sound_file": "ambient/oceansurf.ogg"
+				"sound_file": "ambient/ocean.ogg"
 			},
 			"type": "sound_source_area",
 			"x": -192,
@@ -95,11 +95,11 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "cragland_door_left",
-			"type": "grey_rock_cave_doorway_dark",
 			"property_data": {
 				"_dest_door": "catwalk_door_left",
 				"_dest_level": "cragland.cfg"
 			},
+			"type": "grey_rock_cave_doorway_dark",
 			"x": -2429,
 			"y": -843
 		},
@@ -108,11 +108,11 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "cragland_door_right",
-			"type": "grey_rock_cave_doorway_dark",
 			"property_data": {
 				"_dest_door": "catwalk_door_right",
 				"_dest_level": "cragland.cfg"
 			},
+			"type": "grey_rock_cave_doorway_dark",
 			"x": 1521,
 			"y": -1071
 		},
@@ -281,6 +281,15 @@
 			"type": "sound_source_area",
 			"x": -308,
 			"y": -980
+		},
+		{
+			"_uuid": "c9fe10d4fde7470cb138b3a0900e3d91",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_693480ea",
+			"type": "coin_gold_enormous",
+			"x": -2052,
+			"y": -804
 		}
 	],
 	"dimensions": [-2880,-2016,1759,31],
