--- a/data/level/Seaside/cragland.cfg
+++ b/data/level/Seaside/cragland.cfg
@@ -443,11 +443,11 @@
 			"custom": true,
 			"face_right": false,
 			"label": "catwalk_door_right",
-			"type": "grey_rock_cave_doorway_dark",
 			"property_data": {
 				"_dest_door": "cragland_door_right",
 				"_dest_level": "cragland-catwalk.cfg"
 			},
+			"type": "grey_rock_cave_doorway_dark",
 			"x": 595,
 			"y": -1583
 		},
@@ -529,11 +529,11 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "catwalk_door_left",
-			"type": "grey_rock_cave_doorway_dark",
 			"property_data": {
 				"_dest_door": "cragland_door_left",
 				"_dest_level": "cragland-catwalk.cfg"
 			},
+			"type": "grey_rock_cave_doorway_dark",
 			"x": -4401,
 			"y": -714
 		},
@@ -587,6 +587,155 @@
 			"type": "save_statue",
 			"x": 542,
 			"y": 17
+		},
+		{
+			"_uuid": "346ba6a67f0143c2893fd82435f21c78",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_28254d98",
+			"property_data": {
+				"_x2_bound": 4736,
+				"_x_bound": -5712,
+				"_y2_bound": 160,
+				"_y_bound": -2064,
+				"sound_file": "ambient/wind-blustery.ogg"
+			},
+			"type": "sound_source_area",
+			"x": -3692,
+			"y": -1260
+		},
+		{
+			"_uuid": "dbf774c2f50248348ab3fd3fcc6d8b91",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5d9c97d2",
+			"property_data": {
+				"_x2_bound": 4800,
+				"_x_bound": -5744,
+				"_y2_bound": 1008,
+				"_y_bound": -320,
+				"sound_file": "ambient/ocean.ogg"
+			},
+			"type": "sound_source_area",
+			"x": -3828,
+			"y": 108
+		},
+		{
+			"_uuid": "13b19f93717d44ecbbb3c582d6c34a2d",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7f8de0e6",
+			"property_data": {
+				"original_level_we_spawned_on": "cragland.cfg"
+			},
+			"type": "super_shooting_plant",
+			"x": -2397,
+			"y": 552
+		},
+		{
+			"_uuid": "e1f7e3febe1244218a81420f99e89b0d",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1b50f0d",
+			"property_data": {
+				"original_level_we_spawned_on": "cragland.cfg"
+			},
+			"type": "super_shooting_plant",
+			"x": -3275,
+			"y": 520
+		},
+		{
+			"_uuid": "d9f2039554644c3f810ba9d4efbc53db",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4a9c36d6",
+			"property_data": {
+				"original_level_we_spawned_on": "cragland.cfg"
+			},
+			"type": "super_shooting_plant",
+			"x": -4759,
+			"y": 40
+		},
+		{
+			"_uuid": "23056dd4be6d4ffbb6a2f583d3b3baab",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7c87cfb5",
+			"type": "coin_silver",
+			"x": -3775,
+			"y": -447
+		},
+		{
+			"_uuid": "504287d0def3432dae4c78cd63d42f68",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_116b89b",
+			"type": "coin_silver",
+			"x": -3487,
+			"y": -575
+		},
+		{
+			"_uuid": "f81c54a6559f437db1a8306506d54b94",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_57f55d89",
+			"type": "coin_gold",
+			"x": -4255,
+			"y": -95
+		},
+		{
+			"_uuid": "ef8bbde467d946969036e242cdde8618",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7c90196",
+			"type": "coin_gold",
+			"x": -4319,
+			"y": -1055
+		},
+		{
+			"_uuid": "8e5401af52f14d0a90eb3702ed72470c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6564bd71",
+			"type": "coin_gold",
+			"x": -4575,
+			"y": -1087
+		},
+		{
+			"_uuid": "80aec2f74a8b4913a1ee1e9cdbee516f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_47d8b4ce",
+			"type": "coin_silver",
+			"x": -4383,
+			"y": -1247
+		},
+		{
+			"_uuid": "3d029657ae0647ad934b9c30dceac0bb",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3313b2f7",
+			"type": "coin_silver",
+			"x": -4511,
+			"y": -1471
+		},
+		{
+			"_uuid": "4204b8629e5d48929e5914e80e1923f6",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5fff4182",
+			"type": "coin_silver",
+			"x": -4543,
+			"y": 545
+		},
+		{
+			"_uuid": "70715d02007147a4b3d206299f64e41e",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6a9a7eed",
+			"type": "coin_silver",
+			"x": -3029,
+			"y": 737
 		}
 	],
 	"dimensions": [-5632,-1984,4607,1343],
@@ -601,18 +750,6 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
 		{
 			"tiles": ",
 ,
@@ -790,43 +927,7 @@ nbr,nbr,nbr,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,,,,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_background_behind_trees"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_near_background"
+			"zorder": "player"
 		},
 		{
 			"tiles": "",
@@ -836,7 +937,7 @@ nbr,nbr,nbr,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,,,,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "exterior_sand_background"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
@@ -1151,55 +1252,7 @@ fbr
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "foliage_background"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_foreground"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,ngs,ngs
@@ -1216,7 +1269,7 @@ fbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs
 ,,,,,,,,,,,,,,ngs,ngs
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs
@@ -1225,7 +1278,7 @@ fbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,,,,,ngs,ngs
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,ngs
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,ngs
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,ngs
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs
@@ -1234,7 +1287,7 @@ fbr
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,
 ,
@@ -1254,7 +1307,7 @@ ngs,ngs,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,
 ,
-,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs
 ,
 ,
 ,
@@ -1264,7 +1317,7 @@ ngs,ngs,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,,,,,,,,,,,,,,ngs,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs",
 			"unique_tiles": ",ngs",
 			"variations": "",
@@ -1336,18 +1389,6 @@ bto,bto,bto,bto,bto,bto,bto,bto,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"y": -768,
 			"y_speed": 100,
 			"zorder": "black_fill_tiles"
-		},
-		{
-			"tiles": ",
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Cragland",
