Most of the work for a bright, seaside-background compatible version of the cave palette.

--- a/data/level/Seaside/cragland-catwalk.cfg
+++ b/data/level/Seaside/cragland-catwalk.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"background": "seaside",
 	"background_offset": [0,0],
-	"background_palette": "seaside_sunny",
+	"background_palette": "cave_seaside",
 	"character": [
 		{
 			"_uuid": "749ed79aaaf9472d8a9fcc1998bab1a2",
@@ -295,7 +295,7 @@
 	"dimensions": [-2880,-2016,1759,31],
 	"id": "cragland-catwalk.cfg",
 	"music": "alienjamyes.ogg",
-	"palettes": ["cave_pearl","chrome_to_brass"],
+	"palettes": ["cave_seaside","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
