--- a/data/tiles/plants.png_grass-MTP.cfg
+++ b/data/tiles/plants.png_grass-MTP.cfg
@@ -1,5 +1,5 @@
 {
-palettes: "@include data/palettes.cfg:seaside_palettes",
+palettes: "@include data/palettes.cfg:seaside_palettes + cave_palettes",
 multi_tile_pattern: [
 	{
 		chance: 100,
