Added some foliage to the cragland-catwalk level.

--- a/data/level/Seaside/cragland-catwalk.cfg
+++ b/data/level/Seaside/cragland-catwalk.cfg
@@ -521,6 +521,52 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr
 			"y": -2432,
 			"y_speed": 100,
 			"zorder": "exterior_solid_ground_tiles"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,,,ngs,ngs,ngs
+,
+,
+ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,ngs
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": ",ngs",
+			"variations": "",
+			"x": -1856,
+			"x_speed": 100,
+			"y": -864,
+			"y_speed": 100,
+			"zorder": "foliage_foreground"
 		}
 	],
 	"title": "Rock-a-Fort",
