Put in colors for a shadow-system based brightening that I actually think I don't want to use.  Put a partial heart container in the chest on cragland.

--- a/data/level/Seaside/cragland.cfg
+++ b/data/level/Seaside/cragland.cfg
@@ -154,7 +154,11 @@
 			"face_right": false,
 			"label": "_551a842a",
 			"property_data": {
-				"spawn_type": "mana_cube"
+				"event_name": "cragland-treasure-chest-opened",
+				"spawn_properties": {
+					"kind": "@eval enum item_partial_heart_container"
+				},
+				"spawn_type": "generic_acquirable_inventory_item"
 			},
 			"type": "treasure_chest",
 			"x": 256,
