Made a bunch of plants use stereo panning on their attack sounds.

--- a/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
+++ b/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
@@ -19,7 +19,7 @@ properties: {
 	_flashcount: { type: "int", default: 0, persistent: false },
 },
 
-on_shoot: "spawn('forest_shooting_plant_huge.big_shot', mid_x, mid_y, {velocity_x: 1d100-50, velocity_y: if(upside_down = 1, 1000, -1*(2000+1d1000))} )",
+on_shoot: "[sound_falloff('pollen-shot.wav'),spawn('forest_shooting_plant_huge.big_shot', mid_x, mid_y, {velocity_x: 1d100-50, velocity_y: if(upside_down = 1, 1000, -1*(2000+1d1000))} )]",
 on_end_anim: "if(animation = 'normal', if(_firecount < 3, [add(_firecount, 1), animation('normal')], [set(_firecount,0),animation('flash')]))",
 on_end_fire_anim: "animation('normal')",
 on_end_flash_anim: "if(_flashcount < 3, [add(_flashcount, 1), animation('flash')], [set(_flashcount,0),animation('fire')])",
