--- a/data/objects/enemies/plants/super_shooting_plant.cfg
+++ b/data/objects/enemies/plants/super_shooting_plant.cfg
@@ -26,7 +26,7 @@ on_end_shoot_anim: "animation('normal')",
 
 on_shoot: 	"[
 				spawn('super_shooting_plant.pollen_ball_huge', mid_x, if(down = 1, mid_y - 40, mid_y + 40), {facing: facing, velocity_y: 500*upside_down-500, upside_down: upside_down}),
-				sound('pollen-shot.wav'),
+				sound_falloff('pollen-shot.wav'),
 			]",
 
 editor_info: {
@@ -100,7 +100,7 @@ object_type: [
 		properties: {
 			death_effects: "def(string type) -> commands [
 				spawn('pollen_impact_particle',mid_x,mid_y,0),
-				sound('Seed-fall'+1d4+'.wav')
+				sound_falloff('Seed-fall'+1d4+'.wav')
 			]",
 		},
 
@@ -145,7 +145,7 @@ object_type: [
 
 			death_effects: "def(string type) -> commands [
 				spawn('pollen_impact_particle',mid_x,mid_y,0),
-				sound('Seed-fall'+1d4+'.wav'),
+				sound_falloff('Seed-fall'+1d4+'.wav'),
 				map([-1,1], spawn('super_shooting_plant.pollen_ball', mid_x + (10*value), mid_y, {
 									facing: facing,
 									upside_down: upside_down,
