--- a/data/objects/enemies/plants/helicopter_plant.cfg
+++ b/data/objects/enemies/plants/helicopter_plant.cfg
@@ -47,7 +47,7 @@ timer_frequency: 5,
 on_timer: "if(y < _target_y, set(accel_y, 30), set(accel_y, -10))",
 
 on_enter_spring_anim: "me.force_death()",
-on_shoot: "[sound('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x, midpoint_y, {facing: facing, velocity_x:_spawn_velocity_x, velocity_y:_spawn_velocity_y})]",
+on_shoot: "[sound_falloff('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x, midpoint_y, {facing: facing, velocity_x:_spawn_velocity_x, velocity_y:_spawn_velocity_y})]",
 on_process_fly: "set(rotate, min(rotate+3, max(rotate-3, if(level.player.midpoint_x < midpoint_x, 180 - target, target))))
 	               where target =
 	                  min(90, max(0, (((level.player.midpoint_y - 40) - midpoint_y)*25)/max(2, abs(level.player.midpoint_x - midpoint_x))))",
