--- a/data/objects/enemies/plants/spitting_flower.cfg
+++ b/data/objects/enemies/plants/spitting_flower.cfg
@@ -23,7 +23,7 @@ properties: {
 	_loading_time: "3",
 },
 
-on_pop: "sound('flowerpop'+1d5+'.wav')",
+on_pop: "sound_falloff('flowerpop'+1d5+'.wav')",
 on_end_normal_anim: "if(_load >= _loading_time, [animation('fire'), set(_load, 0)], [animation('normal'), add(_load, 1)])",
 on_end_spring_anim: "animation('normal')",
 on_end_fire_anim: "animation('normal')",
@@ -35,10 +35,10 @@ on_shoot: "fire_event(if(is_facing_towards_player and higher_difficulty, 'aimed_
 on_aimed_shot: "[spawn('spitting_flower.pollen_ball', midpoint_x+ facing*50, midpoint_y -15, facing, 
 					[set(child.velocity_x,velx*facing), 
 					set(child.accel_y, ac_y)]),
-					sound('FlowerShot.ogg')]
+					sound_falloff('FlowerShot.ogg')]
 					where velx = ((level.player.mid_x - me.mid_x))*facing*1.54
 					where ac_y = ((level.player.mid_y - me.mid_y)/15)",
-on_normal_shot: "[spawn('spitting_flower.pollen_ball', midpoint_x+ facing*50, midpoint_y -15, facing, set(child.velocity_x,800*facing)),sound('FlowerShot.ogg')]",
+on_normal_shot: "[spawn('spitting_flower.pollen_ball', midpoint_x+ facing*50, midpoint_y -15, facing, set(child.velocity_x,800*facing)),sound_falloff('FlowerShot.ogg')]",
 
 on_die: "[death_effects('medium'), set(hitpoints, max_hitpoints), animation('dying')]",
 
