--- a/data/objects/enemies/plants/white_swaying_flower.cfg
+++ b/data/objects/enemies/plants/white_swaying_flower.cfg
@@ -98,7 +98,7 @@ object_type: [{
 	zsub_order: 2,
 	on_end_anim: "animation(animation)",
 	timer_frequency: 80,
-	on_timer: "spawn('white_swaying_flower.shot', mid_x, mid_y + 30*upside_down, {facing:facing, velocity_x:1d100-50, velocity_y:200*upside_down })",
+	on_timer: "[sound_falloff('pollen-shot.wav'),spawn('white_swaying_flower.shot', mid_x, mid_y + 30*upside_down, {facing:facing, velocity_x:1d100-50, velocity_y:200*upside_down })]",
 	animation: [
 		{
 			image: "enemies/white-shooting-flower.png",
