Cosmetic updates for the lighthouse ruins.

--- a/data/level/Seaside/cragland-catwalk.cfg
+++ b/data/level/Seaside/cragland-catwalk.cfg
@@ -569,7 +569,7 @@ ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,
 			"zorder": "foliage_foreground"
 		}
 	],
-	"title": "Rock-a-Fort",
+	"title": "Cragland",
 	"touch_controls": true,
 	"vars": {
 	},
