--- a/data/level/Seaside/lighthouse-ruins.cfg
+++ b/data/level/Seaside/lighthouse-ruins.cfg
@@ -53,23 +53,192 @@
 			"custom": true,
 			"label": "downward_exit",
 			"property_data": {
+				"_dest_door": "upward_exit",
+				"_dest_level": "cragland.cfg",
 				"_transition": "iris",
 				"_x2_bound": 1776,
 				"_x_bound": 1212,
 				"_y2_bound": 400,
-				"_y_bound": 96,
-				"_dest_door": "upward_exit",
-				"_dest_level": "cragland.cfg"
+				"_y_bound": 96
 			},
 			"type": "invisible_level_portal",
 			"x": 1312,
 			"y": -96
+		},
+		{
+			"_uuid": "a1a032a3e81c4619bbb25488b04bc62c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_e82443b",
+			"type": "coin_gold",
+			"x": 1281,
+			"y": -671
+		},
+		{
+			"_uuid": "dab37569cc0b4740bd5a69be799080f1",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7c4c6cec",
+			"type": "coin_silver",
+			"x": 1953,
+			"y": -1087
+		},
+		{
+			"_uuid": "a1b376042205485b83c109cee584bdd7",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_49ee448a",
+			"property_data": {
+				"sound_file": "ambient/wind-blustery.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 1620,
+			"y": -1644
+		},
+		{
+			"_uuid": "1168bae5792d45eaa699b4f126d6954f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_648c895a",
+			"type": "seaside_decor_large_barrel",
+			"x": 1545,
+			"y": -1519
+		},
+		{
+			"_uuid": "95a770be573f41ddb17c70c94db1081b",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5722172a",
+			"type": "rock_foreground_seaside1",
+			"x": 1657,
+			"y": -1110
+		},
+		{
+			"_uuid": "821fd5805d384432bd9d65b3d3cea0f8",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_199b2966",
+			"type": "rock_foreground_seaside6",
+			"x": 1564,
+			"y": -1077
+		},
+		{
+			"_uuid": "88458f7e3d294a6080ac00d6f59171bf",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_60ddd639",
+			"type": "rock_foreground_seaside1",
+			"x": 1087,
+			"y": -817
+		},
+		{
+			"_uuid": "7063c3a4593c4d9fa4e3bc983994db0b",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7d1888c3",
+			"type": "rock_foreground_seaside1",
+			"x": 1708,
+			"y": -259
+		},
+		{
+			"_uuid": "7bbabb8c5bb644399399974c829ab943",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_13ac62ae",
+			"type": "rock_foreground_seaside2",
+			"x": 1967,
+			"y": -386
+		},
+		{
+			"_uuid": "0f81d23f270845af9405d77c8de4b659",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_cb31586",
+			"type": "fern_foreground2",
+			"x": 1849,
+			"y": -288
+		},
+		{
+			"_uuid": "76a360492c7e42cd9c402b45326ea4cd",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6d7a8bf7",
+			"type": "rock_foreground_seaside5",
+			"x": 1045,
+			"y": -1100
+		},
+		{
+			"_uuid": "02628a5842ac4b69975bfc6af8a4cd88",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_30179228",
+			"type": "fern_foreground1",
+			"x": 909,
+			"y": -1136
+		},
+		{
+			"_uuid": "a004724557214eff99799c172c3305ce",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_14c486dc",
+			"type": "rock_foreground_cubic1",
+			"x": 671,
+			"y": -1159
+		},
+		{
+			"_uuid": "811a46025db8436ba1bf4d312bdd515c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_406008a3",
+			"type": "rock_foreground_cubic3",
+			"x": 1912,
+			"y": -187
+		},
+		{
+			"_uuid": "1948090aea224de28a78a1d4185d3a67",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5fd9a5a",
+			"type": "rock_foreground_seaside5",
+			"x": 1056,
+			"y": -347
+		},
+		{
+			"_uuid": "0ff3acd1da6c441a80e769c48c9f8694",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5b035181",
+			"type": "rock_foreground_seaside7",
+			"x": 1034,
+			"y": -453
+		},
+		{
+			"_uuid": "b1d7e221fe0f4ae5a0234e5d92b7eedc",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_31b56c71",
+			"type": "rock_foreground_seaside1",
+			"x": 1077,
+			"y": -165
+		},
+		{
+			"_uuid": "ba72a38910c741ffae9c874a4a9cb0a5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_56ca1949",
+			"type": "rock_foreground_seaside8",
+			"upside_down": true,
+			"x": 1090,
+			"y": -591
 		}
 	],
 	"dimensions": [736,-1824,2207,159],
 	"id": "lighthouse-ruins.cfg",
 	"music": "",
-	"palettes": ["chrome_to_brass","seaside_sunny"],
+	"palettes": ["cement_mossy","seaside_sunny"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
