Tweaked a new cheat code for frogatto.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -306,7 +306,7 @@ properties: {
 		;set_item_amount(enum item_lesser_mana_talisman, 1),
 		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 5),
+		;set_item_amount(enum item_heart_container, 5),  //do not use add - use 'set' or this is not idempotent.
 		;add_item(enum item_acquirable_attractor, 1),
 	]",
 	hax_: "[
@@ -315,9 +315,9 @@ properties: {
 		map(ability_list_full, set_item_amount(value,1)),
 		map(super_ability_list_full, set_item_amount(value,1)),
 		]",	
-	hax_mtm: "[
+	hax_mtm: "[  /* gives you progression similar to being past Mortimer's house */
 		;set_item_amount(enum item_magic_map, 1),
-		;add_item(enum item_heart_container, 1),
+		;set_item_amount(enum item_heart_container, 3),
 		;add_item(enum item_fire_breath_talisman, 1),
 	]",
 	choppa: "set(_jump_cheat,true)",
