Put an unused song on the bay overlook secret levels.

--- a/data/level/Seaside/bay-overlook.cfg
+++ b/data/level/Seaside/bay-overlook.cfg
@@ -2076,7 +2076,7 @@
 	],
 	"dimensions": [-3392,-1408,4639,2111],
 	"id": "bay-overlook.cfg",
-	"music": "",
+	"music": "RainyDayTrainJazz.ogg",
 	"next_level": "frogatto-grotto.cfg",
 	"palettes": ["chrome_to_brass","seaside_sunny"],
 	"preloads": "",
