--- a/data/level/Seaside/cragland-catwalk.cfg
+++ b/data/level/Seaside/cragland-catwalk.cfg
@@ -294,7 +294,7 @@
 	],
 	"dimensions": [-2880,-2016,1759,31],
 	"id": "cragland-catwalk.cfg",
-	"music": "alienjamyes.ogg",
+	"music": "RainyDayTrainJazz.ogg",
 	"palettes": ["cave_seaside","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
