--- a/data/level/Seaside/cragland.cfg
+++ b/data/level/Seaside/cragland.cfg
@@ -744,7 +744,7 @@
 	],
 	"dimensions": [-5632,-1984,4607,1343],
 	"id": "cragland.cfg",
-	"music": "alienjamyes.ogg",
+	"music": "RainyDayTrainJazz.ogg",
 	"palettes": ["chrome_to_brass","seaside_sunny"],
 	"preloads": "",
 	"segment_height": 0,
