--- a/data/level/Seaside/lighthouse-ruins.cfg
+++ b/data/level/Seaside/lighthouse-ruins.cfg
@@ -237,7 +237,7 @@
 	],
 	"dimensions": [736,-1824,2207,159],
 	"id": "lighthouse-ruins.cfg",
-	"music": "",
+	"music": "RainyDayTrainJazz.ogg",
 	"palettes": ["cement_mossy","seaside_sunny"],
 	"preloads": "",
 	"segment_height": 0,
