--- a/data/music_settings.cfg
+++ b/data/music_settings.cfg
@@ -259,6 +259,10 @@
 		volume: 0.35,
 	},
 	{
+		name: "RainyDayTrainJazz.ogg",
+		volume: 0.35,
+	},
+	{
 		name: "Rockability.ogg",
 		volume: 0.35,
 	},
