Added a teleporter to easily get back from the lighthouse.

--- a/data/level/Seaside/lighthouse-ruins.cfg
+++ b/data/level/Seaside/lighthouse-ruins.cfg
@@ -233,6 +233,34 @@
 			"upside_down": true,
 			"x": 1090,
 			"y": -591
+		},
+		{
+			"_uuid": "f34992bb402247cfa73951d898f1a120",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "bay_overlook_teleporter",
+			"property_data": {
+				"_dest_door": "lighthouse_teleporter",
+				"_dest_level": "bay-overlook.cfg"
+			},
+			"type": "teleport_pedestal",
+			"x": 880,
+			"y": -1082
+		},
+		{
+			"_uuid": "c090a83aa2b04df18fee50d2b7696bab",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5e4a87ef",
+			"property_data": {
+				"_x2_bound": 1746,
+				"_x_bound": 1646,
+				"_y2_bound": -477,
+				"_y_bound": -777
+			},
+			"type": "save_statue",
+			"x": 1666,
+			"y": -607
 		}
 	],
 	"dimensions": [736,-1824,2207,159],
