--- a/data/level/Dungeon/dungeon-crawling.cfg
+++ b/data/level/Dungeon/dungeon-crawling.cfg
@@ -275,7 +275,7 @@
 				"_dest_level": "dungeon-blocks.cfg"
 			},
 			"type": "dungeon_interior_door",
-			"x": -1248,
+			"x": -1184,
 			"y": -1568
 		},
 		{
@@ -382,7 +382,7 @@
 				"spawn_type": "generic_acquirable_inventory_item"
 			},
 			"type": "treasure_chest",
-			"x": -1408,
+			"x": -832,
 			"y": -1536
 		},
 		{
@@ -1955,14 +1955,14 @@
 			"custom": true,
 			"label": "_184f0116",
 			"property_data": {
-				"_x2_bound": -1048,
-				"_x_bound": -1148,
-				"_y2_bound": -1368,
-				"_y_bound": -1668
+				"_x2_bound": -1029,
+				"_x_bound": -1129,
+				"_y2_bound": -1408,
+				"_y_bound": -1669
 			},
 			"type": "save_statue",
-			"x": -1128,
-			"y": -1498
+			"x": -1109,
+			"y": -1499
 		},
 		{
 			"_uuid": "7282b34b24fc4c10aeba043371455f6b",
@@ -2052,8 +2052,27 @@
 			"custom": true,
 			"label": "_4e0ccd67",
 			"type": "torch",
-			"x": -1312,
+			"x": -1248,
 			"y": -1568
+		},
+		{
+			"_uuid": "dfcf957752d24728a12a32127340541d",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_775207",
+			"type": "dungeon_stonework_arch1",
+			"x": -790,
+			"y": -1693
+		},
+		{
+			"_uuid": "9c0e81ab3ee64964858bc06bad80b1d9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_29515c69",
+			"type": "dungeon_stonework_arch1",
+			"x": -1448,
+			"y": -1687
 		}
 	],
 	"dimensions": [-1664,-2368,5023,1151],
@@ -2088,6 +2107,16 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_deep_parallax_objects"
+		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw,dpw
@@ -2263,6 +2292,16 @@ dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,dpf,
 			"zorder": "background_parallax_floors"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
+		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
@@ -2393,6 +2432,16 @@ dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
+			"zorder": "liquid_particle_effects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
 			"zorder": "player"
 		},
 		{
@@ -2429,12 +2478,12 @@ dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,
 ,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
 ,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
 ,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
-,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
-,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
-,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
-,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
-,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
-,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
+,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
+,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
+,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
+,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
+,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
+,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
 ,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
 ,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
 ,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,dbk,dbk,dbk,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,,,,,,,,,,,,,,,,,,,dbk,dbk,dbk,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
@@ -2786,6 +2835,86 @@ dcp,dcp,dcp,dcp,dcp,dcp,,,,dcp,dcp,dcp,dcp,dcp,dcp,dcp,dcp,dcp,dcp,dcp,dcp,dcp,d
 			"y": -1184,
 			"y_speed": 100,
 			"zorder": "interior_shelves_and_stairs"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": 50
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": 51
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "shadow_overlay"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Dungeon Crawling",
