Major code cleanup for the kitty robot, and gave it balanced responses to elemental damage.

--- a/data/objects/enemies/bosses/kitty_robot.cfg
+++ b/data/objects/enemies/bosses/kitty_robot.cfg
@@ -6,9 +6,18 @@ solid_area: [14,0,44,40],
 solid_dimensions: ["boss"],
 prototype: ["hittable"],
 is_strict: true,
-hitpoints: 10000000,   #bogus, gets reset in on_create
+hitpoints: 1,
 
 properties: {
+
+#-------------------------- constructor/destructor logic --------------------------#
+	epihittable_obj_constructor: "commands ::	[
+		add_object(_pilot),
+		set_max_hitpoints({casual: standard_thrown_damage * 8, challenging: standard_thrown_damage * 12})
+	]",
+
+
+#-------------------------- hittable overrides --------------------------#
 	team: "'evil'",
 	attack_damage: "1",
 	hurt_velocity_y: "-20",
@@ -19,18 +28,7 @@ properties: {
 	description: "~A security vehicle equipped with the latest weaponry and the finest of hydraulics.~",
 	taste: "~Like blood, ironically enough.~",
 
-	too_close: "abs(level.player.mid_x - mid_x) < too_close_range",
-	in_attack_range: "abs(level.player.mid_x - mid_x) < attack_range and
-	  abs(level.player.mid_y - mid_y) < vertical_attack_range",
-	fire_missile: "if(_missile_load_counter < missile_load_time, add(_missile_load_counter, 1), [spawn('cannon.missile', mid_x + facing*90, mid_y-14, facing,
-	           [set(child.velocity_x, 800*facing)]), spawn('explosion_spark', mid_x+ facing*50, mid_y -14, facing),sound('cannon.ogg'), set(_missile_load_counter, 0), 
-	           		schedule(4, [spawn('cannon.missile', mid_x + facing*20, mid_y-14, facing,
-	           [set(child.velocity_x, 800*facing)]), spawn('explosion_spark', mid_x+ facing*1, mid_y -14, facing),sound('cannon.ogg')])])",
-
-	too_close_range: "200",
-	attack_range: "500",
-	vertical_attack_range: "200",
-	missile_load_time: "12",
+	is_a_boss: { default:true },
 
 	death_effects: "def(string type) -> commands [
 		fire_event(get_object_or_die(level, 'kitty_robot_controller'), 'boss_killed'),
@@ -38,10 +36,52 @@ properties: {
 		spawn('explosion_big_recurring',  mid_x, mid_y, facing),
 	]",
 
-	is_a_boss: { default:true },
+
+	custom_damage_table: "{
+		enum neutral: 1.0,
+		enum fire: 0.0,
+		enum energy: 0.05,
+		enum arcane: 0.0,
+		enum acid: 0.05,
+		enum impact: 1.0,
+		enum impale: 1.0,
+		enum lacerate: 1.0
+	}",
+	
+
+#-------------------------- custom behavior --------------------------#
+	too_close: "abs(level.player.mid_x - mid_x) < too_close_range",
+	
+	in_attack_range: "abs(level.player.mid_x - mid_x) < attack_range and
+	  abs(level.player.mid_y - mid_y) < vertical_attack_range",
+	  
+	fire_missile: "if(_missile_load_counter < missile_load_time,
+		add(_missile_load_counter, 1),
+		[
+			spawn('cannon.missile', mid_x + facing*90, mid_y-14, facing, [
+	        	set(child.velocity_x, 800*facing)
+	        ]),
+			spawn('explosion_spark', mid_x+ facing*50, mid_y -14, facing),
+			sound_falloff('cannon.ogg'),
+			set(_missile_load_counter, 0), 
+			schedule(4, [
+				spawn('cannon.missile', mid_x + facing*20, mid_y-14, facing, [
+					set(child.velocity_x, 800*facing)
+				]),
+				spawn('explosion_spark', mid_x+ facing*1, mid_y -14, facing),
+				sound_falloff('cannon.ogg')
+			])
+		]
+	)",
+
+	too_close_range: "200",
+	attack_range: "500",
+	vertical_attack_range: "200",
+	missile_load_time: "12",
 
 
-	#--------------------------  vars --------------------------#
+
+#--------------------------  vars --------------------------#
 	_x_bound: { type: "int", editor_info: { type: "x", value: "x" } },
 	_x2_bound: { type: "int", editor_info: { type: "x", value: "x + img_w" } },
 	_missile_load_counter: { type: "int", default: 0, persistent: false },
@@ -49,22 +89,74 @@ properties: {
 
 },
 
-on_create: "[add_object(_pilot), set_max_hitpoints({casual: standard_thrown_damage * 4, challenging: standard_thrown_damage * 8}),]",
-on_process: "[set(_pilot.mid_x, mid_x + facing*10), set(_pilot.mid_y, mid_y-40), set(_pilot.facing, facing)]",
-on_end_anim: "if(animation = 'prepare_jump', [animation('jump'),set(velocity_y,-1000),sound('robot-kitty-jump.wav')],
-if(animation = 'jump' and (not is_standing), [animation('jump')],
-if(in_attack_range and (not too_close),
-  if(level.player.y2 < y and is_standing, [animation('prepare_jump')],
-  if((level.player.mid_x > mid_x) != (facing > 0),
-	  [animation('turn'), set(facing, -facing)],
-      [set(accel_x, 0), animation('normal'), fire_missile])),
+on_process: "[
+	set(_pilot.mid_x, mid_x + facing*10),
+	set(_pilot.mid_y, mid_y-40),
+	set(_pilot.facing, facing)
+]",
 
-  if(facing < 0 and x < _x_bound or facing > 0 and x2 > _x2_bound, [animation('turn'), set(facing, -facing)], animation('walk')))))",
-on_collide_side: "if(arg.collide_with != null and arg.collide_with is obj hittable, [if(arg.collide_with.get_hit_by, arg.collide_with.get_hit_by(me))], [if((velocity_x > 0) = (facing > 0), [animation('turn'), set(facing, -facing)]), set(velocity_x, 0)])",
-on_collide_feet: "[animation('land'),if(standing_on, [fire_event(standing_on, 'bounced_on', mapping('xxx', 5)), if(standing_on is obj hittable, if(standing_on.get_hit_by, standing_on.get_hit_by(me)))]), shake_screen(0,100,0,-100)]",
+on_end_anim: "if(animation = 'prepare_jump',
+	[
+		animation('jump'),
+		set(velocity_y,-1000),
+		sound_falloff('robot-kitty-jump.wav')
+	],
+	if(animation = 'jump' and (not is_standing),
+		animation('jump'),
+		if(in_attack_range and (not too_close),
+			if(level.player.y2 < y and is_standing,
+				animation('prepare_jump'),
+				if((level.player.mid_x > mid_x) != (facing > 0),
+					[animation('turn'), set(facing, -facing)],
+      				[set(accel_x, 0), animation('normal'), fire_missile]
+      			)
+      		),
+			if(facing < 0 and x < _x_bound or facing > 0 and x2 > _x2_bound,
+				[animation('turn'), set(facing, -facing)],
+				animation('walk')
+			)
+		)
+	)
+)",
+
+on_collide_side: "if(arg.collide_with != null and arg.collide_with is obj hittable,
+	[
+		if(arg.collide_with.get_hit_by,
+			arg.collide_with.get_hit_by(me)
+		)
+	],
+	[
+		if((velocity_x > 0) = (facing > 0),
+			[
+				animation('turn'),
+				set(facing, -facing)
+			]
+		),
+		set(velocity_x, 0)
+	]
+)",
+
+on_collide_feet: "[
+	animation('land'),
+	if(standing_on,
+		[
+			fire_event(standing_on, 'bounced_on', mapping('xxx', 5)),
+			if(standing_on is obj hittable,
+				if(standing_on.get_hit_by,
+					standing_on.get_hit_by(me)
+				)
+			)
+		]
+	),
+	shake_screen(0,100,0,-100)
+]",
+
+
 editor_info: {
 	category: "enemies, milgramen",
 },
+
+
 animation: [
 	{
 		"@base": true,
